# camtrapml

./: .gitignore  CITATION.cff  LICENSE  README.ipynb  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  notebook.yml  pylint.yml
camtrapml/: __init__.py  dataset.py  download.py
camtrapml/detection/: __init__.py  utils.py
camtrapml/detection/models/: __init__.py  base.py  megadetector.py  tensorflow.py  yolov5.py
camtrapml/embedding/: utils.py
camtrapml/embedding/models/: inaturalist.py
camtrapml/image/: __init__.py  exif.py  utils.py
camtrapml/scripts/: batch_detection.py
