[tool.poetry]
name = "camtrapml"
version = "0.0.0"
description = "CamTrapML is a Python library for Detecting, Classifying, and Analysing Wildlife Camera Trap Imagery."
authors = ["Benjamin C. Evans <Benjamin.Evans@brunel.ac.uk>"]

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^1.22.2"
tensorflow = "^2.8.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
