[tool.poetry]
name = "camtrapml"
version = "0.2.4"
description = "CamTrapML is a Python library for Detecting, Classifying, and Analysing Wildlife Camera Trap Imagery."
authors = ["Benjamin C. Evans <Benjamin.Evans@brunel.ac.uk>"]
license = "MIT"
keywords = ["wildlife", "camtrap", "camera", "trap", "imagery", "classification", "detection", "analysis", "conservation"]
homepage = "https://github.com/bencevans/camtrapml"
repository = "https://github.com/bencevans/camtrapml"
documentation = "https://github.com/bencevans/camtrapml"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition"
]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/bencevans/camtrapml/issues"

[tool.poetry.dependencies]
python = ">=3.7,<4.0.0"
tensorflow = "^2"
numpy = "^1"
tqdm = "^4"
Pillow = "^9"
tensorflow-hub = "^0.12.0"
PyExifTool = "^0.4.13"
font-fredoka-one = "^0.0.4"
requests = "^2"
matplotlib = "^3"
scikit-learn = "1.0.1"


[tool.poetry.dev-dependencies]
nbconvert = "^6.4.2"
notebook = "^6.4.8"
pylint = "^2.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
